# agent-access

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  aca.md  lint-staged.config.js  package-lock.json  package.json  protocol-v0.md  remote-attestation.md  rust-toolchain.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
crates/ap-cli/: Cargo.toml
crates/ap-cli/src/: main.rs
crates/ap-cli/src/command/: connect.rs  connections.rs  listen.rs  mod.rs  output.rs  run.rs  tui.rs  tui_tracing.rs  util.rs
crates/ap-cli/src/providers/: bitwarden.rs  mod.rs
crates/ap-cli/src/storage/: connection_storage.rs  identity_storage.rs  memory_session_store.rs  mod.rs  psk_storage.rs  session_storage.rs
crates/ap-client/: Cargo.toml
crates/ap-client/src/: error.rs  lib.rs  memory_connection_store.rs  memory_psk_store.rs  memory_session_store.rs  proxy.rs  relay.rs  traits.rs  types.rs
crates/ap-client/src/clients/: mod.rs  remote_client.rs  user_client.rs
crates/ap-client/tests/: pairing.rs  websocket_proxy.rs  websocket_relay.rs
crates/ap-error/: Cargo.toml
crates/ap-error-macro/: Cargo.toml
crates/ap-noise/: Cargo.toml
crates/ap-noise/src/: transport.rs
crates/ap-proxy/: Caddyfile  Cargo.toml  Dockerfile  README.md  entrypoint.sh
crates/ap-proxy-client/: Cargo.toml  README.md
crates/ap-proxy-client/src/: config.rs  lib.rs  protocol_client.rs
crates/ap-proxy-protocol/: Cargo.toml
crates/ap-proxy-protocol/src/: auth.rs  lib.rs  messages.rs  rendevouz.rs  rendezvous.rs
crates/ap-proxy/src/: connection.rs  lib.rs  main.rs
crates/ap-proxy/src/server/: handler.rs  mod.rs  proxy_server.rs
crates/ap-proxy/tests/: client_integration.rs
crates/ap-relay/: Cargo.toml  README.md
crates/ap-relay-client/: Cargo.toml  README.md
crates/ap-relay-client/src/: config.rs  lib.rs  protocol_client.rs
crates/ap-relay-protocol/: Cargo.toml
crates/ap-relay-protocol/src/: auth.rs  error.rs  lib.rs  messages.rs  rendezvous.rs
crates/ap-relay/src/: connection.rs  lib.rs  main.rs
crates/ap-relay/src/server/: handler.rs  mod.rs  relay_server.rs
crates/ap-relay/tests/: client_integration.rs
crates/ap-uniffi/: Cargo.toml
crates/ap-uniffi/src/: adapters.rs  callbacks.rs  client.rs  error.rs  lib.rs  remote_client.rs  types.rs  user_client.rs
crates/ap-uniffi/tests/: integration.rs
crates/bw-noise-protocol/src/: psk.rs
crates/bw-proxy/: Cargo.toml  README.md
crates/bw-proxy-client/: Cargo.toml
crates/bw-proxy-client/src/: config.rs  protocol_client.rs
crates/bw-proxy-protocol/: Cargo.toml
crates/bw-proxy/src/: auth.rs  lib.rs
crates/bw-proxy/src/server/: handler.rs
crates/bw-proxy/tests/: client_integration.rs
crates/bw-rat-client/src/: lib.rs  traits.rs  types.rs
crates/bw-rat-client/src/clients/: remote_client.rs  user_client.rs
crates/bw-rat-client/tests/: pairing.rs  websocket_proxy.rs
crates/bw-remote/: Cargo.toml
crates/bw-remote-uniffi/: Cargo.toml
crates/bw-remote-uniffi/src/: client.rs  error.rs  storage.rs  types.rs
crates/bw-remote-uniffi/tests/: integration.rs
crates/bw-remote/src/: main.rs
crates/bw-remote/src/command/: connect.rs  connections.rs  listen.rs  mod.rs  run.rs  tui.rs  tui_tracing.rs  util.rs
crates/bw-remote/src/providers/: bitwarden.rs  mod.rs
crates/bw-remote/src/storage/: mod.rs  psk_storage.rs
examples/github-action/: README.md  reusable-psk-credential.yml
examples/js-wasm/: Cargo.toml  README.md  package-lock.json
examples/js-wasm/src/: client.rs  lib.rs  proxy_client.rs  relay_client.rs  storage.rs  types.rs
examples/js-wasm/www/: agent-access.js  app.js  index.html  remote-access.js
examples/python-pure/: README.md  pyproject.toml
examples/python-pyo3/: Cargo.toml  README.md  get.py  pair.py
examples/python-pyo3/src/: client.rs  lib.rs  storage.rs
examples/python-uniffi/: README.md  connect_request.py
examples/rust-listener/src/: main.rs
examples/rust-remote/src/: main.rs
examples/shell/: reusable-psk-connect.sh
examples/skills/agent-access/: SKILL.md
examples/skills/remote-access/: SKILL.md
examples/swift/: .gitignore  README.md
examples/swift-uniffi/: README.md
examples/swift-uniffi/Sources/ApUniffiExample/: main.swift
examples/swift/Sources/ApUniffi/: ap_uniffi.swift
examples/swift/Sources/ApUniffiExample/: main.swift
examples/swift/Sources/CApUniffi/include/: ap_uniffiFFI.h
examples/uniffi/: README.md  connect_request.py  test.py
scripts/: docker-build.sh
