[package]
name = "ap-proxy"
description = "Zero-knowledge WebSocket proxy server for access-protocol"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["experimental-post-quantum-crypto"]
experimental-post-quantum-crypto = ["ap-proxy-protocol/experimental-post-quantum-crypto"]

[[bin]]
name = "ap-proxy"
path = "src/main.rs"

[dependencies]
ap-proxy-protocol = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["net", "signal", "sync", "time"] }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
ap-proxy-client = { workspace = true, features = ["native-websocket"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
