[package]
name = "ap-uniffi"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
publish = false

[lib]
name = "ap_uniffi"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
ap-client = { path = "../ap-client", features = ["native-websocket"] }
ap-relay-client = { path = "../ap-relay-client", default-features = false, features = ["native-websocket"] }
ap-relay-protocol = { path = "../ap-relay-protocol" }
ap-noise = { path = "../ap-noise" }
async-trait = "=0.1.89"
thiserror = "=1.0.69"
tokio = { version = "=1.50.0", features = ["rt-multi-thread", "sync", "macros"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.22", features = ["fmt", "env-filter"] }
uniffi = { version = "=0.28.3", features = ["cli", "tokio"] }
zeroize = { version = "=1.8.2", features = ["zeroize_derive"] }

[dev-dependencies]
ap-relay = { path = "../ap-relay" }
tokio = { version = "=1.50.0", features = ["rt-multi-thread", "sync", "macros", "time"] }
zeroize = { version = "=1.8.2", features = ["zeroize_derive"] }

[lints.clippy]
unwrap_used = "deny"
string_slice = "warn"
