[package]
name = "bw-proxy-protocol"
description = "Shared wire protocol types for the bw-proxy WebSocket relay"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["experimental-post-quantum-crypto"]
experimental-post-quantum-crypto = []

[dependencies]
bw-error = { workspace = true }
coset = "0.4.1"
ed25519-dalek = "2.2.0"
hex = "0.4.3"
ml-dsa = "0.0.4"
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
