[project]
name = "bw-remote"
version = "0.1.0"
description = "Pure Python implementation of the Bitwarden Remote Access RemoteClient"
requires-python = ">=3.9"
dependencies = [
    "websockets>=12.0",
    "PyNaCl>=1.5",
    "cbor2>=5.4",
    "dissononce>=0.34",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["."]
include = ["bw_remote*"]
